--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.1",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.559.0",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-modern-drawer": "^1.4.0",
+    "react-redux": "^9.2.0",
+    "sweetalert2": "^11.26.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
