--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.2.1",
     "react-modern-drawer": "^1.4.0",
     "react-redux": "^9.2.0",
+    "react-responsive-pagination": "^2.12.0",
     "sweetalert2": "^11.26.4"
   },
   "devDependencies": {
