--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.1",
+    "@stripe/react-stripe-js": "^5.4.1",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
